--- a/Galerij.html
+++ b/Galerij.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 <h1>een impressie</h1>    
-<img src="Nemo1" alt="Nemo1" width="300">
-<img src="Nemo2" alt="Nemo2" width="300">
-<img src="Nemo3" alt="Nemo3" width="300">
+<img src="afbeeldingen/Nemo1.jpg" alt="Nemo1" width="300">
+<img src="afbeeldingen/Nemo2.jpeg" alt="Nemo2" width="300">
+<img src="afbeeldingen/Nemo3.jpg" alt="Nemo3" width="300">
+<h1>HTML5 geluid</h1>
+<audio controls
+src="https://file-examples-com.github.io/uploads/2017/11/file_example_WAV_1MG.wav"></audio>
 </body>
