--- a/Home.html
+++ b/Home.html
@@ -14,5 +14,8 @@
         <br>
         <img src="Nemo_logo" alt="Nemo Science Center Amsterdam" width="200" height="100">
     </header>
+    <a href="index.html">Index</a>
+    <a href="Galerij.html">Galerij</a>
+    <a href="Info.html">Informatie</a>
 </body>
 </html>
