--- a/Info.html
+++ b/Info.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>NbO Amsterdam</title>
-<meta name="description" content="Nbo Science Center Amsterdam">
+<title>Nemo Amsterdam</title>
+<meta name="description" content="Nemo Science Center Amsterdam">
 <meta name="keywords" content="Science, Amsterdam, museum, family">
 <meta name="author" content="Heleen Veerman">
 </head>
@@ -44,4 +44,9 @@ Oosterdok 2
 1011 VX  Amsterdam<br>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/IKoN7sBASA4?si=X3gXawgqb5kuGmBE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <br>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/xUyZPFAgq-c?si=OegiiZvocsBQ_VFn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/xUyZPFAgq-c?si=OegiiZvocsBQ_VFn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br>
+<a href="index.html">Index</a>
+<a href="Galerij.html">Galerij</a>
+<a href="Info.html">Informatie</a>
+</body>
+</html>
