--- a/Home.html
+++ b/Home.html
@@ -12,7 +12,7 @@
         <h1>Nemo Science Center Amsterdam</h1>
         <hr>
         <br>
-        <img src="Nemo_logo" alt="Nemo Science Center Amsterdam" width="200" height="100">
+        <img src="afbeeldingen/Nemo_logo.jpg" alt="Nemo Science Center Amsterdam" width="200" height="100">
     </header>
     <a href="index.html">Index</a>
     <a href="Galerij.html">Galerij</a>
