--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 NEMO Science Museum is een wetenschap- en technologiemuseum in Amsterdam. Het museum trok in 2015 bijna 600.000 bezoekers.
 <br><br>
 Het motto van NEMO is Hands On! De objecten in NEMO zijn vaak experimentele opstellingen waarbij de bezoeker zelf een wetenschappelijk verschijnsel op het gebied van natuurkunde, scheikunde, biologie en gedragswetenschappen kan onderzoeken. Het museum wil jongeren door experimenten enthousiasmeren voor wetenschap en techniek. Zo'n 38% van de bezoekers is jonger dan 18 jaar.
-<a href="https://nl.wikipedia.org/wiki/NEMO_Science_Museum">source</a>
+<a href="https://nl.wikipedia.org/wiki/NEMO_Science_Museum">source</a><br>
 <a href="index.html">Index</a>
 <a href="Galerij.html">Galerij</a>
 <a href="Info.html">Informatie</a>
